fix: logo fix flicker

--- a/src/features/components/templates/navigation/static-nav/static-nav.module.scss
+++ b/src/features/components/templates/navigation/static-nav/static-nav.module.scss
@@ -9,7 +9,3 @@
         block-size: 3.6rem;
     }
 }
-.static_nav_logo_academy {
-    inline-size: 19.9rem;
-    block-size: 3.19rem;
-}
